[gd_scene load_steps=8 format=3 uid="uid://main"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_gm"]
[ext_resource type="Script" path="res://scripts/Board.gd" id="2_board"]
[ext_resource type="Script" path="res://scripts/Spawner.gd" id="3_spawner"]
[ext_resource type="Script" path="res://scripts/UIManager.gd" id="4_ui"]

[sub_resource type="Environment" id="Environment_neon"]
background_mode = 3
glow_enabled = true
glow_intensity = 0.8
glow_strength = 1.2
glow_bloom = 0.5
glow_blend_mode = 0

[node name="Main" type="Node2D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_neon")

[node name="Board" type="Node2D" parent="."]
position = Vector2(320, 50)
script = ExtResource("2_board")

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(320, 50)
script = ExtResource("3_spawner")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_gm")

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_ui")

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UI/Control"]
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 46.0
text = "Score: 0"

[node name="NextPieceLabel" type="Label" parent="UI/Control"]
modulate = Color(1, 0, 1, 1)
layout_mode = 0
offset_left = 650.0
offset_top = 20.0
offset_right = 750.0
offset_bottom = 46.0
text = "Next:"

[node name="NextPieceContainer" type="Control" parent="UI/Control"]
layout_mode = 0
offset_left = 680.0
offset_top = 80.0
offset_right = 720.0
offset_bottom = 120.0

[connection signal="timeout" from="FallTimer" to="GameManager" id="4_timeout"]
